# Snake

./: .gitignore  CMakeLists.txt  Snake.sln  readme.md
include/snake/: Board.h  Direction.h  GameStatus.h  IFoodPlacer.h  IInput.h  IRenderer.h  Point.h  Snake.h  SnakeGame.h
legacy/: Original.cs
src/: RandomFoodPlacer.cpp  RandomFoodPlacer.h  SnakeGame.cpp  main.cpp
src/Snake.ConsoleApp/: ConsoleInput.cs  ConsoleRenderer.cs  Program.cs  Snake.ConsoleApp.csproj
src/Snake.Core/: Board.cs  Direction.cs  GameStatus.cs  IFoodPlacer.cs  IInput.cs  IRenderer.cs  Point.cs  RandomFoodPlacer.cs  Snake.Core.csproj  SnakeBody.cs  SnakeGame.cs
src/console/: ConsoleInput.cpp  ConsoleInput.h  ConsoleRenderer.cpp  ConsoleRenderer.h
tests/: core_tests.cpp
tests/Snake.Core.Tests/: Program.cs  Snake.Core.Tests.csproj  TestRunner.cs
